--- a/htdocs/app/config/custom/fos_user.yml
+++ b/htdocs/app/config/custom/fos_user.yml
@@ -2,3 +2,7 @@ fos_user:
     db_driver: orm
     firewall_name: main
     user_class: Application\UserBundle\Entity\User
+    registration:
+        form:
+            handler: application.form.handler.registration
+            type: application_user_registration
