--- a/htdocs/app/config/security.yml
+++ b/htdocs/app/config/security.yml
@@ -29,5 +29,6 @@ security:
 
     access_control:
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/login, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/*, role: ROLE_ADMIN }
