--- a/htdocs/src/Application/UserBundle/Resources/config/services.yml
+++ b/htdocs/src/Application/UserBundle/Resources/config/services.yml
@@ -18,3 +18,24 @@ services:
             - ~
         calls:
             - [ setUserManager, [@application_user.user.manager]]
+
+    application.form.registration:
+        class: Application\UserBundle\Form\Type\RegistrationFormType
+        tags:
+            - { name: form.type, alias: application_user_registration }
+
+    application.registration.form:
+        factory_method: createNamed
+        factory_service: form.factory
+        class: Symfony\Component\Form\Form
+        arguments:
+            - %fos_user.registration.form.name%
+            - @application.form.registration
+            - null
+            - validation_groups: %fos_user.registration.form.validation_groups%
+
+    application.form.handler.registration:
+        class: FOS\UserBundle\Form\Handler\RegistrationFormHandler
+        arguments: ["@application.registration.form", "@request", "@fos_user.user_manager", "@fos_user.mailer", "@fos_user.util.token_generator"]
+        scope: request
+        public: false
