EW-26: Forwarded port 80 from vagrant to host on 8888 port EW-28: Removed AcmeDemoBundle. Added folder for WebChallengeBundle EW-29: Removed codeception and travis

--- a/htdocs/app/config/routing.yml
+++ b/htdocs/app/config/routing.yml
@@ -1,3 +1,7 @@
+web_challenge_main:
+    resource: "@WebChallengeMainBundle/Resources/config/routing.yml"
+    prefix:   /
+
 application_sonata_admin:
     resource: "@ApplicationSonataAdminBundle/Resources/config/routing.yml"
     prefix:   /
